2009-01-19 Seb
* moved script to check catalog from erp5_core to here
* merge code of checking stock and checking catalog

2008-11-20 Kazuhiko
* Add ERP5Site_dumpSkinProperty
* Add ERP5Site_dumpWorkflowChain

2008-10-30 Vincent Pelletier
* Add a ZSQLMethod to recreate roles_and_users from ZODB security cache. Requires ZSQLCatalog r24410 or later.

2008-10-01 thibaut
* Add an alarm. It checks which object in catalog table is into ZODB.